# regrafusion

./: .gitignore  CMakeLists.txt  README.md  displaywidget.cpp  displaywidget.h  doxyconfig  icons.qrc  subdirs.pro  viewer.cpp  viewer.h  viewer.ui
doc/: architecture.drawio
doc/uml/: leaf_creation_sequence.txt  tree_draw_sequence.txt  viewport_draw_sequence.txt
inc/: common.h  displaywidget.h  leaf_identifier.h  math_utils.h  rgf_ctx.h  shape_widget_event_filter.h  uipainter.h  view.h  viewer.h
inc/controls/: control.h  path_control.h
inc/editors/: circle_editor.h  editor.h  line_editor.h  path_editor.h  rectangle_editor.h  transform_editor.h
inc/gfx/: branch.h  leaf.h  tree.h
inc/gfx/leaves/: circle.h  line.h  path.h  rectangle.h  spawnpoint.h
src/: displaywidget.cpp  leaf_identifier.cpp  main.cpp  math_utils.cpp  rgf_ctx.cpp  shape_widget_event_filter.cpp  uipainter.cpp  viewer.cpp
src/controls/: control.cpp  path_control.cpp
src/editors/: circle_editor.cpp  editor.cpp  line_editor.cpp  path_editor.cpp  rectangle_editor.cpp  transform_editor.cpp
src/gfx/: branch.cpp  leaf.cpp  tree.cpp
src/gfx/leaves/: circle.cpp  line.cpp  path.cpp  rectangle.cpp  spawnpoint.cpp
